--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <button id='clicker'>
       <img src="images/cat.jpg">
     </button>
+
+    <script src="js/app.js"></script>
   </body>
 </html>
 
