--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
   </head>
 
   <body>
-    <p><span id='counter'>0</span> Click(s).</p>
-    <button id='clicker'>
-      <img src="images/cat.jpg">
-    </button>
+
+    <p><span id='counter0'>0</span> click</p>
+    <p><span id='name0'>poplinre</span></p>
+    <img id='clicker0' src="images/cat.jpg">
+
+    <p><span id='counter1'>0</span> click</p>
+    <p><span id='name1'>chewie</span></p>
+    <img id='clicker1' src="images/cat1.jpg">
 
     <script src="js/app.js"></script>
   </body>
