--- a/index.html
+++ b/index.html
@@ -7,15 +7,11 @@
   </head>
 
   <body>
-
-    <p><span id='counter0'>0</span> click</p>
-    <p><span id='name0'>poplinre</span></p>
-    <img id='clicker0' src="images/cat.jpg">
-
-    <p><span id='counter1'>0</span> click</p>
-    <p><span id='name1'>chewie</span></p>
-    <img id='clicker1' src="images/cat1.jpg">
-
+    <div id="cat">
+      <h2 id="cat-name"></h2>
+      <div id="cat-count"></div>
+      <img id="cat-img" src="" alt="cute cat">
+    </div>
     <script src="js/app.js"></script>
   </body>
 </html>
