using cat list for 2 cats

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
 
   <body>
+    <ul id="cat-list"></ul>
     <div id="cat">
       <h2 id="cat-name"></h2>
       <div id="cat-count"></div>
