--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul id="cat-list"></ul>
     <div id="cat">
       <h2 id="cat-name"></h2>
+      <h3 id="cat-level"></h3>
       <div id="cat-count"></div>
       <img id="cat-img" src="" alt="cute cat">
     </div>
